# tink

./: .npmrc  CLAUDE.md  README.md  index.html  package.json  setup-models.sh  setup.sh  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: 01-tts-overview.md  02-display-modes.md  03-claude-hooks.md  04-folder-visualization.md  05-architecture.md  06-selection-hint.md  07-global-input.md  08-markdown-stripping.md  09-settings-system.md  10-http-speak-server.md  11-voice-visualizations.md  12-stt-personality-replies.md  13-animation-guardrails.md  14-creature-choreography.md  audio-timeline.md  conversational-companion-feasibility.md  creature.md  demo-script.md  demo-voice-input.md  idea-plan-visualizer.md  logging.md  mac-to-linux-port.md  narration-guardrails.md  next-session-priorities.md  plan-unified-mute.md  size-report-2026-04-20.md  sleep-wake-screen-tracking.md  speech-calibration.md  status-report.md
docs/test/: test-achievements.md  test-events.md  test-force-graph.md  test-hooks.md  test-overview.md  test-settings.md
public/assets/personalities/: README.md  cutie.md  enrichment-guide.md  gossipy-bestie.md  mcafee.md  noir-detective.md  ship-computer.md  six-seven.md  zen.md
public/assets/sfx/: complete-explode.aiff
public/assets/vfx/: vfx-cartoon_fire_02.json  vfx-cartoon_fire_04.json  vfx-popping_bubbles_07.json  vfx-popping_bubbles_08.json
src/: App.css  App.tsx  fire.ts  pixi-app.ts  sounds.ts  word-scroller.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: creature_runtime.rs  event_sink.rs  file_watcher.rs  folder_viz.rs  hotkeys.rs  lib.rs  settings.rs  sfx.rs  speak.rs  speak_server.rs  state.rs  tray.rs  window_setup.rs
src-tauri/src/commands/: misc.rs  mod.rs  settings.rs  stt.rs  summarizer.rs  voice.rs
src/SettingsPanel/: INDEX.md  config.ts  index.tsx  theme.ts  types.ts
src/SettingsPanel/components/: AddVoiceRow.tsx  Dropdown.tsx  HotkeyCaptureRow.tsx  HotkeyTestIndicator.tsx  ModelCard.tsx  Row.tsx  RowShell.tsx  SectionBox.tsx  SelectRow.tsx  SoundSubRow.tsx  Spinner.tsx  SwatchRow.tsx  ToggleRow.tsx  Tooltip.tsx
src/features/: INDEX.md
tests/: pipeline-test.sh
voice-core/: Cargo.toml
voice-core/src/: conversation.rs  lib.rs  stt.rs  summarizer.rs  tts.rs  wake_word.rs
(+22 files in other folders)
